--- a/public/styling/review-block.css
+++ b/public/styling/review-block.css
@@ -1,3 +1,12 @@
 div.review-block {
-    border: 1px solid aquamarine;
+    border: 1px solid #646464;
+    max-width: 500px;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    background: linear-gradient(to bottom, #def8ff, #bee5f5);
+}
+
+span.reviewer-name{
+    font-weight: bold;
 }
