Collected CSS files to main.css
Signed-off-by: Brian Evans <ebrian101@gmail.com>

--- a/public/styling/review-block.css
+++ b/public/styling/review-block.css
@@ -1,9 +1,9 @@
 div.review-block {
     border: 1px solid #646464;
-    max-width: 500px;
+    display: block;
     border-radius: 10px;
     padding: 10px;
-    margin: 10px;
+    margin: 10px 0;
     background: linear-gradient(to bottom, #def8ff, #bee5f5);
 }
 
