Blue styling of site
Signed-off-by: Brian Evans <ebrian101@gmail.com>

--- a/public/styling/main.css
+++ b/public/styling/main.css
@@ -2,3 +2,7 @@
 @import "search-bar.css";
 @import "theme.css";
 @import "top-nav-bar.css";
+@import "page-title.css";
+@import "sub-title.css";
+@import "logo.css";
+@import "links.css";
