--- a/public/styling/review-block.css
+++ b/public/styling/review-block.css
@@ -4,7 +4,8 @@ div.review-block {
     border-radius: 10px;
     padding: 10px;
     margin: 10px 0;
-    background: linear-gradient(to bottom, #def8ff, #bee5f5);
+    background: linear-gradient(to bottom, rgb(255, 232, 222), rgb(255, 232, 222));
+    max-width: 20em;
 }
 
 span.reviewer-name{
