--- a/public/styling/search-bar.css
+++ b/public/styling/search-bar.css
@@ -16,4 +16,5 @@ input[type=text].search-box {
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
     font-size: large;
     font-family: 'Work Sans', sans-serif;
+    outline-color: #ff744d;
 }
