--- a/public/styling/input.css
+++ b/public/styling/input.css
@@ -1,21 +1,31 @@
-input[type=text], textarea {
-    padding: 0.5em;
+div.text-input-wrapper {
+    padding: 0 0.35em;
     margin: 0.25em 0;
+    max-width: 100%;
     border: 1px solid #646464;
     border-radius: 0.2em;
-    max-width: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
-input[type=text]:hover, textarea:focus {
+input[type=text], textarea {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    padding: 0.7em 0;
+    margin: 0;
+}
+
+div.text-input-wrapper:hover {
     border: 1px solid #000;
 }
 
-input[type=text]:focus, textarea:focus {
+div.text-input-wrapper:focus-within {
     outline: 2px solid #ff744d;
 }
 
 div > textarea {
-    display: block;
+    width: 100%;
+    resize: vertical;
 }
 
 button.increment {
@@ -42,19 +52,28 @@ button.deselected {
 }
 
 button.deselected:first-child, button.selected:first-child {
-    border-bottom-left-radius: 3px;
-    border-top-left-radius: 3px;
+    border-bottom-left-radius: 1em;
+    border-top-left-radius: 1em;
 }
 
 button.deselected:last-child, button.selected:last-child {
-    border-bottom-right-radius: 3px;
-    border-top-right-radius: 3px;
+    border-bottom-right-radius: 1em;
+    border-top-right-radius: 1em;
 }
 
 button.deselected, button.selected {
-    padding: 0.3em;
+    padding: 0.4em;
+    height: 2em;
 }
 
 button.deselected:hover {
     background-color: #f5ac99;
 }
+
+p.validation-error-message {
+    font-size: small;
+    color: crimson;
+    margin-top: 0;
+    padding-top: 0;
+}
+
