Added funnel screens to new review process
Signed-off-by: Brian Evans <ebrian101@gmail.com>

--- a/public/styling/input-validation.css
+++ b/public/styling/input-validation.css
@@ -3,5 +3,6 @@ div.no-validation-error-container {
 }
 
 div.validation-error-container {
+    /*It would be great to make this flash?*/
     background-color: rgba(220, 20, 60, 0.3);
 }
